# prototypes

./: Sony_DualSense.cpp  camera_matrices.cpp  can_bus.cpp  capture_images  capture_images.cpp  capture_images2  combineVideos  controller  cordic_algorithm.cpp  cordic_algorithm.m  disparity  display  display_live.cpp  display_liveStereo  display_liveStereo.cpp  gstreamer_Camera_Disparity.cpp  gstreamer_Camera_Disparity2.cpp  gstreamer_Camera_combineVideos.cpp  gstreamer_Camera_combineVideos2.cpp  gstreamer_Camera_combineVideosMP4.cpp  gstreamer_Camera_jetson.cpp  gstreamer_Camera_jetson_captureImages.cpp  gstreamer_Camera_jetson_captureImages2.cpp  gstreamer_Camera_jetson_stereo.cpp  gstreamer_captureImages.cpp  gstreamer_joinVideoFiles.cpp  gstreamer_saveFile.cpp  gstreamer_screenVideo.cpp  gstreamer_stereoSaveVideos.cpp  hello_world.c  hello_world2  hello_world2.c  hello_world2.cpp  hello_world3  hello_world3.cpp  hello_world4  hello_world4.cpp  image_focus  image_focus.cpp  my_program  (+5 more)
cpp_sample/: CMakeLists.txt  main.cpp
cpp_sample/build_mac/: CMakeCache.txt  Makefile  cmake_install.cmake  main
